sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3: error: not found: value cocktailSort3
		cocktailSort3();
                ^AlgCocktailSort3:50: error: not found: value conitnuer
      conitnuer = false
      ^